<resources>
    <string name="app_name">FileBrowserAndroid</string>

    <string name="featureFileBrowserBtnText">Файловый менеджер</string>
    <string name="featureModifiedFilesBtnText">Изменённые файлы</string>
    <string name="modifiedFilesText">Изменённые файлы</string>



    <string name="sortbyname">По имени</string>
    <string name="sortbysizedesc">По уменьшению размера</string>
    <string name="sortbysizeasc">По возрастанию размера</string>
    <string name="sortbydatecreated">По дате создания</string>
    <string name="sortbyextension">По расширению</string>




    <string name="couldntOpenFile">Не получилось открыть файл</string>
    <string name="directoryIsNullOrEmpty">Директория пустая</string>
    <string name="noFilesFound">Файлы не найдены</string>


    <string name="channel_id">dbUpdateChannel</string>
    <string name="channel_name">dbUpdateChannel</string>
    <string name="channel_description">dbUpdateChannel</string>

    <string name="notification_title">Database update</string>
    <string name="notification_text">Database update in progress</string>
</resources>